jaeger-all-in-one-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger-all-in-one
  name: jaeger-all-in-one
spec:
  ports:
    - name: "16686"
      port: 16686
      targetPort: 16686
    - name: "14268"
      port: 14268
      targetPort: 14268
    - name: "14250"
      port: 14250
      targetPort: 14250
  selector:
    io.kompose.service: jaeger-all-in-one
status:
  loadBalancer: {}
