otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: otel-collector
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/pytest_otel: "true"
        io.kompose.service: otel-collector
    spec:
      containers:
        - args:
            - --config=/etc/otel-collector-config.yaml
            - ""
          image: otel/opentelemetry-collector-contrib-dev:latest
          livenessProbe:
            exec:
              command:
                - curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:13133/
            failureThreshold: 20
            periodSeconds: 10
          name: otel-collector
          ports:
            - containerPort: 1888
            - containerPort: 13133
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 6831
            - containerPort: 55679
          resources: {}
          volumeMounts:
            - mountPath: /etc/otel-collector-config.yaml
              name: otel-collector-claim0
              subPath: otel-collector-config.yaml
      restartPolicy: Always
      volumes:
        - name: otel-collector-claim0
          configMap:
            name: otel-collector-config-yaml
status: {}
