otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  ports:
    - name: "1888"
      port: 1888
      targetPort: 1888
    - name: "13133"
      port: 13133
      targetPort: 13133
    - name: "14317"
      port: 14317
      targetPort: 4317
    - name: "55670"
      port: 55670
      targetPort: 55679
  selector:
    io.kompose.service: otel-collector
  externalTrafficPolicy: Local
  type: LoadBalancer
